<resources>
    <string name="app_name">Note Keeping App</string>
    <string name="note">Note</string>
    <string name="add_button">Add Button</string>
    <string name="title">Title</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change Theme</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about_header">About</string>
    <string name="no_notes_available">No notes available.</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="share">Share</string>
    <string name="submit">Submit</string>
</resources>